@@ -985,8 +985,9 @@
         },
         "url": "https://wicg.github.io/ScrollAnchoring/",
         "webkit-url": "https://bugs.webkit.org/show_bug.cgi?id=171099",
+        "description": "Maintains page scroll position when content is modified.",
         "keywords": ["scroll", "anchor"],
-        "category": "css"
+        "category": "html"
     },
     {
         "name": "Shadow DOM",
@@ -1156,6 +1157,16 @@
         "url": "https://www.w3.org/TR/webmidi/",
         "keywords": ["MIDI, music, synthesizer, keyboard"],
         "description": "An API supporting the Musical Instrument Digital Interface (MIDI) protocol, enabling web applications to enumerate and select MIDI input and output devices on the client system and send and receive MIDI messages."
+    },
+    {
+        "name": "Web Sharing",
+        "status": {
+            "status": "Under Consideration"
+        },
+        "url": "https://github.com/WICG/web-share/blob/master/docs/interface.md",
+        "webkit-url": "https://bugs.webkit.org/show_bug.cgi?id=171100",
+        "keywords": ["sharing"],
+        "description": "An API to allow content from the page to be exposed to platform sharing APIs."
     },
     {
         "name": "WebUSB",
